# weeknote-generator

./: .gitignore  Pipfile  README.md  setup.cfg
weekgen/: generator.py  main.py  pocket.py  strava.py
