[metadata]
name = almad-weekly-notes
version = 0.0.1
author = Almad
author_email = bugs@almad.net
description = A personal weekly notes generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Almad/weeknote-generator
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Intended Audience :: Developers
    Topic :: Text Processing

[options]
packages = find:
python_requires = >=3.8
install_requires =
    keyring
    pocket-recommendations
    python-dateutil
    requests
[options.entry_points]
console_scripts =
    generate-weeknote = weekgen.main:generate
